# zoro-db

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  catalog.json  config.yaml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: docker-image.yml
api/: .air.toml  .gitignore  README.md  go.mod
api/cmd/server/: main.go
api/internal/engine/: zoro_engine.go
api/internal/handlers/: collection.go  init_engine.go  search.go  vector.go
api/internal/native/: cgo.go
docs/: API_DOCS.md  BENCHMARK.md  CHANGELOGS.md  CONTRIBUTING.md  DEVELOPER_GUIDE.md  DEVELOPMENT.md  Docker_Local.md  Examples.md  README.md  ROAD_MAP.md  Road_Map.md  SDK_DOCUMENTATION.md  SEMANTIC_SEARCH_EXAMPLES.md  VERSION_TRACKER.md  Version_History.md  Version_Tracker.md  dev_guide.md
docs/api/: API_DOCUMENTATION.md  API_SUMMARY.md  COLLECTIONS.md  POINTS.md  SEARCH.md  SYSTEM.md
docs/api/v0/: API_DOCUMENTAION_v0.md
docs/architecture/: ARCHITECTURE.md  Architecture.md
docs/architecture/change_logs/: CHANGELOGS.md
docs/architecture/error_tracker/: ERROR_REFF.md
docs/archive/v0.1.0/: ARCHITECTURE.md
engine/: CMakeLists.txt  README.md
engine/include/: collection.hpp  engine.hpp  native_api.h  storage.hpp  vector.hpp
engine/src/: collection.cpp  engine.cpp  native_api.cpp  storage.cpp
scripts/: bootstrap.sh  build.sh
src/: CMakeLists.txt  README.md  build.sh  config.h  main.cpp
src/api/: CMakeLists.txt  CollectionService.cpp  CollectionService.h  README.md  go.mod  main.go
src/api/c_api/: zoro_c_api.cpp  zoro_c_api.h
src/api/cli/: CMakeLists.txt  CollectionService.h  README.md  cli.cpp  cli.h
src/api/cli/include/: utils.h
src/api/cli/src/: collections_cmd.cpp  greetings.cpp  health_cmd.cpp  help_cmd.cpp  points_cmd.cpp  utils.cpp
src/api/core/: collections.go  init.go  points.go  search.go  struct.go
src/api/dto/: collections_dto.go  dto.go  points_dto.go
src/api/handlers/: collections.go  points.go  search.go
src/api/rest/: README.md  dto.go  go.mod  go.sum  handlers.go  main.go  server.go
src/api/rest/api/: routes.go
src/api/rest/c_api/: c_structs.h  zoro_c_api.cpp  zoro_c_api.h
src/api/rest/core/: collections.go  init.go  points.go  points_upsert.go  search.go  struct.go
src/api/rest/docs/: api.md
src/api/rest/dto/: collections.go  dto.go
src/api/rest/handlers/: collections.go  points.go  search.go  systems.go  upsert_points.go
src/api/rest/services/: collections.go  points.go  search.go  upsert_points.go
src/api/rest/utils/: banner.go
src/api/router/: routes.go
src/api/routes/: routes.go
src/api/services/: collections.go  points.go  search.go
src/api/src/: main.go
src/api/src/c_api/: c_structs.h  zoro_c_api.cpp
src/api/src/handlers/: systems.go
src/bridge/: CMakeLists.txt  README.md  zoro_c_api.cpp  zoro_c_api.h
src/bridge/src/: c_structs.h  collections.cpp  internal_globals.h  points.cpp  search.cpp  zoro_c_api.cpp
src/collection/: CMakeLists.txt  README.md
src/collection/include/: Collection.h  CollectionManager.h  collection_runtime.h
src/collection/src/: Collection.cpp  CollectionManager.cpp  CollectionManager.h  CollectionManagerCollections.cpp  CollectionManagerPoints.cpp  access_collection.cpp  manage_collections.cpp  points.cpp  upsert_points.cpp
src/engine/: CMakeLists.txt  README.md  main.cpp
src/engine/core/: version.cpp  version.hpp
src/engine/include/: config.hpp
src/engine/include/storage/: collection.hpp  collection_config.hpp  collection_manager.hpp  db_config.hpp  point.hpp  segment.hpp  storage.hpp  vector_db.hpp
src/engine/src/: config.cpp
src/engine/src/storage/: collection.cpp  points.cpp  storage.cpp  storageManager.cpp  vector_db.cpp
src/index/: CMakeLists.txt  distance_metric_utils.h  index_factory.cpp  index_factory.h  search_result.h  vector_index.h
src/index/faiss/: faiss_config.h  faiss_id_map.cpp  faiss_id_map.h  faiss_index.cpp  faiss_index.h
src/services/: CMakeLists.txt  README.md
src/services/include/: CollectionService.h
src/services/src/: CollectionService.cpp  CollectionService.h  CollectionService_collections.cpp  CollectionService_points.cpp  CollectionService_search.cpp  collections.cpp  metadata_cache.h  points.cpp  search.cpp  system_startup.cpp  upsert_points.cpp
src/storage/: CMakeLists.txt  README.md
src/storage/include/: Catalog.h  CollectionMeta.h  Distance_utils.h  FileUtils.h  StorageEngine.h  Utils.h  struct.h
src/storage/src/: Catalog.cpp  CollectionMeta.cpp  FileUtils.cpp  Metadata_Search.cpp  StorageEngine.cpp  StorageEngine_Collection.cpp  StorageEngine_Points.cpp  collection.cpp  collection_metadata.cpp  load_collections.cpp  manage_collection.cpp  points.cpp
src/storage/tests/: fake_wal.h  test_Catalog.cpp  test_CollectionMeta.cpp  test_FileUtils.cpp  test_StorageEngine.cpp  test_upsertPoints.cpp
src/tests/: CMakeLists.txt  test_collection.cpp  test_version.cpp
src/utils/: CMakeLists.txt  struct.h  vector_index.hpp
src/utils/common/: generate_id.h  time_stamp.h
src/wal/: CMakeLists.txt  README.md
src/wal/include/: null_wal.h  struct.h  types.h  utils.h  wal.h  wal_writer.h
src/wal/src/: crc_utils.cpp  file_utils.h  utils.cpp  wal_writer.cpp  wal_writer_utils.cpp  write_ahead_log.cpp  write_ahead_log.h
src/wal/tests/: test_wal_writer.cpp
tests/: test_end_to_end.cpp
